Tests/Theorems.lean
import Quotify.Command

/--
error: Theorems marked with `[quotify]` must have one of the following forms:

‚ÄĘ `‚ąÄ ‚Ä¶, ‚ąÄ a b, (a ‚Čą b) ‚Üí f a = f b`
‚ÄĘ `‚ąÄ ‚Ä¶, ‚ąÄ a‚āĀ b‚āĀ a‚āā b‚āā, (a‚āĀ ‚Čą a‚āā) ‚Üí (b‚āĀ ‚Čą b‚āā) ‚Üí f a‚āĀ b‚āĀ = f a‚āā b‚āā`
‚ÄĘ `‚ąÄ ‚Ä¶, ‚ąÄ a b, (a ‚Čą b) ‚Üí f a ‚Čą f b`
‚ÄĘ `‚ąÄ ‚Ä¶, ‚ąÄ a‚āĀ a‚āā, (a‚āĀ ‚Čą a‚āā) ‚Üí ‚ąÄ b‚āĀ b‚āā, (b‚āĀ ‚Čą b‚āā) ‚Üí f a‚āĀ b‚āĀ ‚Čą f a‚āā b‚āā`

The given theorem does not match any of these.
-/
#guard_msgs(error) in
@[quotify]
theorem t‚āĀ (l‚āĀ l‚āā : List őĪ) : l‚āĀ ‚Čą l‚āā := sorry

@[quotify]
theorem t‚āā (l‚āĀ l‚āā : List őĪ) (h : l‚āĀ ‚Čą l‚āā) : l‚āĀ.reverse ‚Čą l‚āā.reverse := sorry

@[quotify]
theorem t‚āÉ (l‚āĀ l‚āā : List őĪ) (h : (List.isSetoid _).r l‚āĀ l‚āā) : l‚āĀ.reverse ‚Čą l‚āā.reverse := sorry

/-- info:
‚ÄĘ map: [t‚āā, t‚āÉ]
-/
#guard_msgs in
#quotify_theorems List.Perm

namespace X

opaque t‚āā : Nat

/-- info:
‚ÄĘ map: [_root_.t‚āā, t‚āÉ]
-/
#guard_msgs in
#quotify_theorems List.Perm

end X

/-- info:
‚ÄĘ map: [t‚āā, t‚āÉ]
-/
#guard_msgs in
#quotify_theorems @List.Perm Nat

@[quotify]
theorem t‚āĄ (l‚āĀ l‚āā : List Nat) (h : l‚āĀ ‚Čą l‚āā) : l‚āĀ.reverse ‚Čą l‚āā.reverse := sorry

/-- info:
‚ÄĘ map: [t‚āā, t‚āÉ]
-/
#guard_msgs in
#quotify_theorems List.Perm

/-- info:
‚ÄĘ map: [t‚āā, t‚āÉ, t‚āĄ]
-/
#guard_msgs in
#quotify_theorems @List.Perm Nat

/--
info:
fun őĪ => @List.Perm őĪ:
  ‚ÄĘ map: [t‚āā, t‚āÉ]
  ‚Źé
@List.Perm Nat:
  ‚ÄĘ map: [t‚āĄ]
-/
#guard_msgs in
set_option pp.explicit true in
#quotify_theorems

-- **TODO** Add some flexibility to the order in which arguments of `quotify` theorems can be given.
@[quotify]
theorem t‚āÖ (l‚āĀ l‚āā r‚āĀ r‚āā : List őĪ) (h‚āĀ : l‚āĀ ‚Čą l‚āā) (h‚āā : r‚āĀ ‚Čą r‚āā) : l‚āĀ ++ r‚āĀ ‚Čą l‚āā ++ r‚āā := sorry

@[quotify]
theorem t‚āÜ (l‚āĀ l‚āā : List őĪ) (h‚āĀ : l‚āĀ ‚Čą l‚āā) (r‚āĀ r‚āā : List őĪ) (h‚āā : r‚āĀ ‚Čą r‚āā) : l‚āĀ ++ r‚āĀ ‚Čą l‚āā ++ r‚āā := sorry

/--
info:
‚ÄĘ map: [t‚āā, t‚āÉ]
‚ÄĘ map‚āā: [t‚āÜ]
-/
#guard_msgs in
#quotify_theorems List.Perm
